[gd_scene load_steps=23 format=2]

[ext_resource path="res://resources/assets/background/bg8.png" type="Texture" id=1]
[ext_resource path="res://resources/fonts/BigSpace-rPKx.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://resources/assets/icons/Table.png" type="Texture" id=3]
[ext_resource path="res://resources/assets/icons/Cristal_Icon.png" type="Texture" id=4]
[ext_resource path="res://resources/assets/icons/active/Back.png" type="Texture" id=5]
[ext_resource path="res://resources/assets/icons/Back.png" type="Texture" id=6]
[ext_resource path="res://Shop.gd" type="Script" id=7]
[ext_resource path="res://resources/assets/player/shop_player/player4.png" type="Texture" id=8]
[ext_resource path="res://resources/assets/player/shop_player/player3.png" type="Texture" id=9]
[ext_resource path="res://resources/assets/player/shop_player/player1.png" type="Texture" id=10]
[ext_resource path="res://resources/assets/player/shop_player/player2.png" type="Texture" id=11]
[ext_resource path="res://resources/assets/icons/Window.png" type="Texture" id=12]
[ext_resource path="res://resources/assets/icons/Close_BTN.png" type="Texture" id=13]
[ext_resource path="res://resources/assets/icons/active/Close_BTN.png" type="Texture" id=14]
[ext_resource path="res://resources/assets/icons/empty.png" type="Texture" id=15]
[ext_resource path="res://resources/fonts/CasanovaScotia-Xm0K.ttf" type="DynamicFontData" id=16]
[ext_resource path="res://admob-lib/admob.gd" type="Script" id=17]

[sub_resource type="DynamicFont" id=1]
size = 60
extra_spacing_char = 4
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 65
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 70
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 50
font_data = ExtResource( 16 )

[sub_resource type="DynamicFont" id=5]
size = 50
font_data = ExtResource( 16 )

[node name="Shop" type="Node2D"]
script = ExtResource( 7 )

[node name="Control" type="Control" parent="."]
margin_right = 360.0
margin_bottom = 740.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BgSprite" type="Sprite" parent="Control"]
texture = ExtResource( 1 )
centered = false

[node name="TitleLabel" type="Label" parent="Control"]
margin_left = 108.0
margin_top = 13.0
margin_right = 253.0
margin_bottom = 98.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.890196, 0.960784, 0.956863, 1 )
text = "SHOP"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" type="TextureButton" parent="Control"]
margin_left = 15.0
margin_top = 15.0
margin_right = 58.0
margin_bottom = 58.0
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CurrencySprite" type="Sprite" parent="Control"]
position = Vector2( 200, 115 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 4 )

[node name="CurrencyTag" type="Sprite" parent="Control"]
position = Vector2( 219.364, 99.951 )
scale = Vector2( 0.376, 0.3 )
texture = ExtResource( 3 )
centered = false

[node name="CurrencyLabel" type="Label" parent="Control/CurrencyTag"]
margin_left = 19.0
margin_right = 343.0
margin_bottom = 84.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.890196, 0.960784, 0.956863, 1 )
text = "0"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player1Button" type="TextureButton" parent="Control"]
margin_left = 30.0
margin_top = 170.0
margin_right = 110.0
margin_bottom = 250.0
texture_normal = ExtResource( 10 )
texture_pressed = ExtResource( 10 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player2Button" type="TextureButton" parent="Control"]
margin_left = 140.0
margin_top = 170.0
margin_right = 220.0
margin_bottom = 250.0
texture_normal = ExtResource( 11 )
texture_pressed = ExtResource( 11 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player3Button" type="TextureButton" parent="Control"]
margin_left = 260.0
margin_top = 170.0
margin_right = 340.0
margin_bottom = 250.0
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 9 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player4Button" type="TextureButton" parent="Control"]
margin_left = 30.0
margin_top = 290.0
margin_right = 110.0
margin_bottom = 370.0
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 8 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PopupMenu" type="PopupMenu" parent="Control"]
margin_left = 30.0
margin_top = 220.0
margin_right = 50.0
margin_bottom = 240.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShopCover" type="Sprite" parent="Control/PopupMenu"]
scale = Vector2( 0.32, 0.32 )
texture = ExtResource( 12 )
centered = false

[node name="PriceTag" type="Sprite" parent="Control/PopupMenu/ShopCover"]
position = Vector2( 250, 300 )
scale = Vector2( 2, 3 )
texture = ExtResource( 4 )

[node name="PriceHolder" type="Sprite" parent="Control/PopupMenu/ShopCover"]
position = Vector2( 320, 240 )
scale = Vector2( 1.3, 1.1 )
texture = ExtResource( 3 )
centered = false

[node name="PriceLabel" type="Label" parent="Control/PopupMenu/ShopCover/PriceHolder"]
margin_left = 17.0
margin_right = 341.0
margin_bottom = 82.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.890196, 0.960784, 0.956863, 1 )
text = "0"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CloseButton" type="TextureButton" parent="Control/PopupMenu/ShopCover"]
margin_left = 370.0
margin_top = 810.0
margin_right = 570.0
margin_bottom = 1010.0
texture_normal = ExtResource( 13 )
texture_pressed = ExtResource( 14 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UnlockButton" type="TextureButton" parent="Control/PopupMenu/ShopCover"]
margin_left = 110.0
margin_top = 500.0
margin_right = 410.0
margin_bottom = 770.0
texture_normal = ExtResource( 15 )
texture_pressed = ExtResource( 15 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control/PopupMenu/ShopCover/UnlockButton"]
margin_left = 26.0
margin_right = 283.0
margin_bottom = 244.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.890196, 0.960784, 0.956863, 1 )
text = "UNLOCK"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SelectButton" type="TextureButton" parent="Control/PopupMenu/ShopCover"]
margin_left = 530.0
margin_top = 500.0
margin_right = 830.0
margin_bottom = 770.0
texture_normal = ExtResource( 15 )
texture_pressed = ExtResource( 15 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control/PopupMenu/ShopCover/SelectButton"]
margin_left = 26.0
margin_right = 283.0
margin_bottom = 244.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.890196, 0.960784, 0.956863, 1 )
text = "SELECT"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AdMob" type="Node" parent="Control"]
script = ExtResource( 17 )
is_real = true
banner_on_top = false
banner_id = "ca-app-pub-9093002613352397/2504992224"
interstitial_id = "ca-app-pub-9093002613352397/6719569409"
rewarded_id = "ca-app-pub-9093002613352397/5841602008"
[connection signal="pressed" from="Control/BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="pressed" from="Control/Player1Button" to="." method="_on_Player1Button_pressed"]
[connection signal="pressed" from="Control/Player2Button" to="." method="_on_Player2Button_pressed"]
[connection signal="pressed" from="Control/Player3Button" to="." method="_on_Player3Button_pressed"]
[connection signal="pressed" from="Control/Player4Button" to="." method="_on_Player4Button_pressed"]
[connection signal="pressed" from="Control/PopupMenu/ShopCover/CloseButton" to="." method="_on_CloseButton_pressed"]
[connection signal="pressed" from="Control/PopupMenu/ShopCover/UnlockButton" to="." method="_on_UnlockButton_pressed"]
[connection signal="pressed" from="Control/PopupMenu/ShopCover/SelectButton" to="." method="_on_SelectButton_pressed"]
